name:
  json-ast
version:
  0.4
synopsis:
  Universal JSON AST datastructure
description:
  This library provides only a data-type representing the JSON value tree.
  It is intended to be used as a shared data-type for all kinds of JSON libraries.
  Same as we have the \"xml-types\" package for libraries dealing with XML.
  .
  Now, since the \"aeson\" @Value@ has been serving this purpose for years,
  we've intentionally made this type representationally identical to it,
  making it possible to convert between them at 0 runtime cost.
  This means that we can use those types interchangeably,
  making it possible to gradually migrate.
  .
  ** Why displace the \"aeson\" @Value@?
  .
  1. To boost the competition between JSON libraries.
  Instead of forcing the community to implement their ideas by patching \"aeson\".
  .
  2. Due to so much patching already happening to \"aeson\",
  its lack of clearly set goals, questionable design and
  strive for backwards compatibility, it's becoming bloated.
  It's trying to be "everything JSON" but without a design or a plan.
  .
  3. It is not healthy for the ecosystem to depend on heavy libraries.
homepage:
  https://github.com/nikita-volkov/json-ast 
bug-reports:
  https://github.com/nikita-volkov/json-ast/issues 
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2016, Nikita Volkov
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/json-ast.git


library
  hs-source-dirs:
    library
  default-extensions:
    NoImplicitPrelude, DeriveDataTypeable
  default-language:
    Haskell2010
  exposed-modules:
    JsonAst
  build-depends:
    -- data:
    vector >= 0.10 && < 0.13,
    text >= 1 && < 2,
    scientific >= 0.3 && < 0.4,
    unordered-containers >= 0.2 && < 0.3,
    -- general:
    base >= 4.6 && < 5
